webroot/sites/premium.drupal.dk/themes/custom/premium/assets/components/css/components/03-organisms/hero.css
/**
 * Type: Organisms.
 * Hero.
 */

.hero {
  position: relative;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  width: 100%;
  height: 420px;
  overflow: hidden;

  @media (--viewport-sm-min) {
    height: 500px;
  }

  @media (--viewport-md-min) {
    height: 600px;
  }

  @media (--viewport-lg-min) {
    height: 650px;
  }

  @media (--viewport-xl-min) {
    height: 78vh;
  }

  iframe,
  video {
    position: absolute;
    top: 0;
    left: 50%;
    width: calc(100vh * (16 / 9));
    min-width: 100%;
    max-width: calc(100vh * (16 / 9));
    height: 100%;
    transform: translateX(-50%);
    pointer-events: none;
  }

  &__content {
    position: relative;
    z-index: 2;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    justify-content: center;
    width: 100%;
    height: 100%;
    padding-top: 60px;
    padding-bottom: 60px;
    color: var(--theme-color);

    & h2,
    & h3 {
      color: inherit;
    }

    @media (--viewport-md-min) {
      padding-top: 120px;
      padding-bottom: 120px;
    }

    .hero--image-added & {
      color: var(--color-white);
    }

    a.button:focus-visible {
      outline: 2px dashed var(--theme-color);
      outline-offset: 2px;
    }
  }

  &__image-wrapper {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    max-height: 100vh;
  }

  &__iframe-wrapper:not(.active) {
    display: none;
  }

  &__iframe-wrapper:not(:empty) {
    position: absolute;
    top: 50%;
    left: 50%;
    width: 100%;
    height: 100%;
    padding-top: 56.25%;
    background-color: var(--color-black);
    transform: translate(-50%, -50%);
  }

  &--center {
    .hero__content {
      align-items: center;
      text-align: center;
    }

    .hero__title,
    .hero__description {
      text-align: center;
    }
  }

  &--right {
    .hero__content {
      align-items: flex-end;
    }

    .hero__title,
    .hero__description {
      text-align: right;
    }
  }

  &--image-added {
    &.hero--overlay {
      &::before {
        position: absolute;
        top: 0;
        right: 0;
        bottom: 0;
        left: 0;
        z-index: 1;
        background-color: var(--theme-background-color);
        opacity: .3;
        content: "";
      }
    }

    picture,
    img,
    .container,
    .hero__image-wrapper {
      display: block;
      height: 100%;
    }

    img {
      width: 100%;
      object-fit: cover;
    }

    .container {
      position: relative;
      margin-top: auto;
      margin-bottom: auto;
    }
  }

  &--no-image {
    height: auto;
    background: var(--theme-background-color);
  }

  &--no-theme {
    height: auto;
    background: none;

    .hero__content {
      padding-top: 0;
      padding-bottom: 0;
      color: var(--color-text);

      & h2,
      & h3 {
        color: var(--color-black);
      }

      @media (--viewport-md-min) {
        padding-top: 0;
        padding-bottom: 0;
      }
    }
  }
}

